# Caesium-Rich-Presence

./: .gitignore  Cargo.toml  README.md  _version.py  main.py
.github/workflows/: codeql-analysis.yml
include/: argument_parser.py  connect_rpc.py  messages.py
src/: arguments.rs  filesystem.rs  lib.rs  main.rs  profile.rs
src/modules/: args.rs  mod.rs  profile_manager.rs
