[package]
name = "caesium_rich_presence"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "caesium_rich_presence"
path = "src/main.rs"

[lib]
name = "modules"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }
termcolor = "1.1.3"