[package]
name = "Caesium-Rich-Presence"
description = "A simple rich presence client for Discord"
authors = ["OctoBanon"]
license = "GPL-3.0"
version = "2.0.0-dev"
edition = "2021"

[[bin]]
name = "caesium_rich_presence"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.0.32" }
termcolor = "1.1.3"
